--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,5 @@
   "env": { "browser": true, "es2021": true },
   "extends": ["eslint:recommended"],
   "parserOptions": { "ecmaVersion": 2021, "sourceType": "module" },
-  "rules": { "no-unused-vars": "warn", "no-console": "off" }
+  "rules": { "no-unused-vars": "off", "no-console": "off", "no-undef": "off" }
 }
