--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,24 @@
 {
-  "env": { "browser": true, "es2021": true },
-  "extends": ["eslint:recommended"],
-  "parserOptions": { "ecmaVersion": 2021, "sourceType": "module" },
-  "rules": { "no-unused-vars": "off", "no-console": "off", "no-undef": "off" }
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "eslint:recommended"
+  ],
+  "parserOptions": {
+    "ecmaVersion": 2021,
+    "sourceType": "module"
+  },
+  "rules": {
+    "no-unused-vars": "off",
+    "no-console": "off",
+    "no-undef": "off",
+    "no-empty": [
+      "error",
+      {
+        "allowEmptyCatch": true
+      }
+    ]
+  }
 }
