--- a/.github/workflows/hosting-test.yml
+++ b/.github/workflows/hosting-test.yml
@@ -30,6 +30,15 @@ jobs:
         with:
           node-version: '18'
       - run: npm install
+      - name: Create Config
+        run: |
+          cat > config.local.js << 'EOF'
+          window.LOCAL_CONFIG = {
+            AISSTREAM_API_KEY: '${{ secrets.AISSTREAM_API_KEY }}',
+            FERRY_MMSI: '238690000',
+            ENABLE_REAL_AIS: true
+          };
+          EOF
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
