--- a/.github/workflows/hosting-test.yml
+++ b/.github/workflows/hosting-test.yml
@@ -29,23 +29,31 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '18'
-      - name: Append Production Secrets to config.js
+      - name: Prepare Clean Deployment
         run: |
-          echo "" >> config.js
-          echo "// Production Secrets (Appended by GitHub Action)" >> config.js
-          echo "window.LOCAL_CONFIG = {" >> config.js
-          echo "  AISSTREAM_API_KEY: '${{ secrets.AISSTREAM_API_KEY }}'," >> config.js
-          echo "  FERRY_MMSI: '238690000'," >> config.js
-          echo "  ENABLE_REAL_AIS: true," >> config.js
-          echo "  urls: { npt: 'https://b2b.promet-info.hr' }" >> config.js
-          echo "};" >> config.js
-          touch .nojekyll
+          mkdir deploy_me
+          # Copy everything to deploy_me EXCEPT git/node_modules/etc
+          cp -r ./*.html ./*.js ./*.css deploy_me/ || true
+          cp -r ./data deploy_me/ || true
+          cp -r ./scripts deploy_me/ || true
+          
+          # Create the production config INSIDE the clean folder
+          cat > deploy_me/vessel-config.js << 'EOF'
+          window.LOCAL_CONFIG = {
+            AISSTREAM_API_KEY: '${{ secrets.AISSTREAM_API_KEY }}',
+            FERRY_MMSI: '238690000',
+            ENABLE_REAL_AIS: true,
+            urls: { npt: 'https://b2b.promet-info.hr' }
+          };
+          console.info('🚢 Vessel-Config.js Loaded Successfully');
+          EOF
+          
+          # Force nojekyll
+          touch deploy_me/.nojekyll
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: .
-          dotfiles: true
-          user_name: 'github-actions[bot]'
-          user_email: 'github-actions[bot]@users.noreply.github.com'
+          publish_dir: deploy_me
           force_orphan: true
+          dotfiles: true
