--- a/.github/workflows/hosting-test.yml
+++ b/.github/workflows/hosting-test.yml
@@ -36,16 +36,22 @@ jobs:
           python3 -c "
           import os, re
           content = open('index.html').read()
+          
+          # Target the specific ID and replace the entire tag
+          pattern = r'<script id=\"ais-config\">.*?</script>'
           real_config = f'<script id=\"ais-config\">window.LOCAL_CONFIG = {{ AISSTREAM_API_KEY: \"{os.environ[\"AIS_KEY\"]}\", FERRY_MMSI: \"238690000\", ENABLE_REAL_AIS: true, urls: {{ npt: \"https://b2b.promet-info.hr\" }} }}; console.info(\"🚢 Production Config Injected\");</script>'
           
-          # Use regex to find the tag regardless of leading whitespace
-          pattern = r'<script id=\"ais-config\">window\.LOCAL_CONFIG = \{ ENABLE_REAL_AIS: false \};</script>'
           if re.search(pattern, content):
               new_content = re.sub(pattern, real_config, content)
               with open('index.html', 'w') as f: f.write(new_content)
               print('✓ Injected secrets into index.html')
           else:
-              print('Error: Could not find ais-config tag in index.html!')
+              print('ERROR: Could not find ais-config tag!')
+              # Show the lines around where we expect it to be
+              lines = content.splitlines()
+              for i, line in enumerate(lines):
+                  if 'ais-config' in line or 'script' in line:
+                      print(f'{i+1}: {line}')
               exit(1)
           "
           touch .nojekyll
