--- a/.github/workflows/hosting-test.yml
+++ b/.github/workflows/hosting-test.yml
@@ -35,47 +35,49 @@ jobs:
         run: |
           python3 -c "
           import os
-          print('--- GITHUB ACTION DIAGNOSTIC START ---')
+          print('--- Secret Injection (Bulletproof Edition) ---')
           filename = 'index.html'
+          marker = '/* PRODUCTION_CONFIG_REPLACE_ME */'
+          
           with open(filename, 'r') as f:
               content = f.read()
           
-          marker = 'id=\"ais-config\"'
-          print(f'Looking for marker: {marker}')
+          print(f'Checking if marker exists in content: {marker in content}')
           
-          if marker not in content:
-              print('!! ERROR: Marker NOT found in file content !!')
-              print('Last 20 lines of file for context:')
-              print(''.join(content.splitlines()[-20:]))
-              exit(1)
+          if marker in content:
+              real_config = f'<script id=\"ais-config\">window.LOCAL_CONFIG = {{ AISSTREAM_API_KEY: \"{os.environ[\"AIS_KEY\"]}\", FERRY_MMSI: \"238690000\", ENABLE_REAL_AIS: true, urls: {{ npt: \"https://b2b.promet-info.hr\" }} }}; console.info(\"🚢 Production Config Injected\");</script>'
+              # Find the line containing the marker
+              lines = content.splitlines()
+              new_lines = []
+              found = False
+              for i, line in enumerate(lines):
+                  if marker in line:
+                      print(f'Match found on line {i+1}')
+                      new_lines.append(real_config)
+                      found = True
+                  else:
+                      new_lines.append(line)
               
-          real_config = f'<script id=\"ais-config\">window.LOCAL_CONFIG = {{ AISSTREAM_API_KEY: \"{os.environ[\"AIS_KEY\"]}\", FERRY_MMSI: \"238690000\", ENABLE_REAL_AIS: true, urls: {{ npt: \"https://b2b.promet-info.hr\" }} }}; console.info(\"🚢 Production Config Injected\");</script>'
-          
-          lines = content.splitlines()
-          new_lines = []
-          found = False
-          for i, line in enumerate(lines):
-              if marker in line:
-                  print(f'MATCH on line {i+1}: {line.strip()}')
-                  new_lines.append(real_config)
-                  found = True
+              if found:
+                  with open(filename, 'w') as f:
+                      f.write('\n'.join(new_lines))
+                  print('✓ Injection successful')
               else:
-                  new_lines.append(line)
-                  
-          if found:
-              with open(filename, 'w') as f:
-                  f.write('\n'.join(new_lines))
-              print('✓ Replacement successful.')
+                  print('Error: Found marker in block search but failed in line search')
+                  exit(1)
           else:
-              print('!! ERROR: Marker found in string search but line-by-line loop failed !!')
+              print('FATAL ERROR: Marker not found. Here is the part of index.html where we expected it:')
+              idx = content.find('id=\"ais-config\"')
+              if idx != -1:
+                  print(content[max(0, idx-50):idx+150])
+              else:
+                  print('Even the id=\"ais-config\" tag is missing!')
               exit(1)
-          print('--- GITHUB ACTION DIAGNOSTIC END ---')
           "
           touch .nojekyll
-      - name: Verify index.html State
+      - name: Verify After-Write
         run: |
-          echo "Checking if injection stuck..."
-          grep "Production Config Injected" index.html || (echo "FAILED: Injection not found in file after write!" && exit 1)
+          grep "Production Config Injected" index.html || (echo "FAILED: Injection string not found after write!" && exit 1)
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
