--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint *.js",
     "format": "prettier --write '**/*.{js,css,html}'",
     "lint-html": "htmlhint '**/*.html'",
-    "lint-css": "stylelint style.css",
+    "lint-css": "stylelint *.css",
     "validate": "npm run lint && npm run lint-html && npm run lint-css",
     "deploy": "gh-pages -d ."
   },
